# biomass-predictor

./: .env.example  .gitignore  MODEL.md  README.md  pyproject.toml
biomass_predictor/: data.py  main.py  models.py  notebook.py  utils.py  visualization.py
